[package]
name = "led-controll"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.0", features = ["derive"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
libudev = "0.3.0"
reqwest = { version = "0.11.15", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
